# merge-explain

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE.txt  README.md  SKILL.md  mcp_entry.py  mcp_server.py  pyproject.toml  requirements.txt  run.sh  server.py  smithery.yaml  ui_server.py
.codex-plugin/: plugin.json
.merge-explain-cache/: a1c216d31e3ac4aa.json  e582842e75f87bbb.json
agents/: openai.yaml
backend/: main.py  requirements.txt
docs/: resolve-design.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
scripts/: diff-view.py  diff.sh
src/: __init__.py  analyzer.py  git_ops.py  main.py  merger.py  models.py  reporter.py
tests/: __init__.py  conftest.py  test_merger.py  test_models.py  test_scenarios.py
